# mousehunt

./: .gitignore  Makefile  main.ipynb  pyproject.toml
src/mousehunt/: lib.py
