[project]
name = "mousehunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "numpy>=2.2.6",
    "polars>=1.30.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "basedpyright>=1.29.2",
    "ruff>=0.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
